--- a/teste.html
+++ b/teste.html
@@ -1,20 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Changelog Viewer</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
+    <link rel="stylesheet" href="css/styleIndex.css">
+
+    <title>Respostas Diárias</title>
 </head>
 
-<body class="bg-gray-100 text-gray-900 p-6">
-    <div class="max-w-4xl mx-auto">
-        <h1 class="text-3xl font-bold mb-4">📄 Changelog</h1>
-        <div id="changelog" class="bg-white shadow-md rounded-lg p-6"></div>
-    </div>
+<body>
 
-    <script src="gitLogs.js"></script>
+    <div class="modal" id="modal">
+        <div class="modal-content" style="width: 500px;">
+            <h1>Daily meet Assíncrono</h1>
+            <form id="dailyForm">
+                <label for="finalizado">✅ O que finalizei ontem?</label>
+                <textarea id="finalizado" name="finalizado" required></textarea>
+
+                <label for="hoje">⏳ O que vou fazer hoje?</label>
+                <textarea id="hoje" name="hoje" required></textarea>
+
+                <label for="bloqueio">🚧 Algum bloqueio ou dúvida?</label>
+                <textarea id="bloqueio" name="bloqueio" required></textarea>
+
+                <button type="submit">Enviar respostas</button>
+            </form>
+        </div>
+    </div>
+    <script>
+
+        // Função para verificar se já foi enviado o formulário no dia de hoje
+        function checkDailyAccess() {
+            const today = new Date().toISOString().split('T')[0]; // Formato YYYY-MM-DD
+            const lastSubmissionDate = localStorage.getItem('lastSubmissionDate'); // Obtém a data do último envio
+
+            if (lastSubmissionDate !== today) {
+                // Se não houver envio no dia de hoje, exibe o modal
+                document.getElementById('modal').style.display = 'flex';
+            } else {
+                document.getElementById('modal').style.display = 'flex';
+
+            }
+        }
+
+        document.getElementById('dailyForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const formData = new FormData(this);
+
+            fetch('submit_respostas.php', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert('Respostas enviadas com sucesso!');
+
+                        // Armazenar a data de envio no localStorage
+                        const today = new Date().toISOString().split('T')[0];
+                        localStorage.setItem('lastSubmissionDate', today);
+                        document.getElementById('modal').style.display = 'none';
+
+                    } else {
+                        alert('Ocorreu um erro ao enviar as respostas.');
+                    }
+                })
+                .catch(error => console.error('Erro:', error));
+        });
+
+        checkDailyAccess();
+
+    </script>
 </body>
 
 </html>
