--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="flex items-center justify-center min-h-screen">
     <div class="image">
-        <video autoplay muted loop class="video-bg" playsinline>
+        <video id="video-bg" autoplay muted loop class="video-bg" playsinline>
             <source src="assets/11 MSA_SQU_Psicina.mp4" type="video/mp4">
             Seu navegador não suporta a tag de vídeo.
         </video>
