feat: permitido alterar comentário direto no Flow

--- a/CHANGELOG/Flow/uploadArquivos.html
+++ b/CHANGELOG/Flow/uploadArquivos.html
@@ -140,19 +140,20 @@
         <body class="vscode-body vscode-light">
             <h1 id="-novo-processo-de-envio-de-arquivos---improov">📝 Novo Processo de Envio de Arquivos - Improov</h1>
 <h2 id="1-instalação-obrigatória">1. Instalação Obrigatória</h2>
-<p>Para que o processo funcione corretamente em todos os computadores conectados à rede da Improov, <strong>é obrigatório instalar o arquivo <code>script.bat</code></strong>.</p>
+<p>Para que o processo funcione corretamente em todos os computadores conectados à rede da Improov, <strong>é obrigatório instalar o arquivo <code>script.bat</code> do link abaixo:</strong></p>
+<a href="https://drive.google.com/file/d/10vwAbLzDrKnGZFMufBXkoU4DpvRVFdJW/view?usp=sharing">https://drive.google.com/file/d/10vwAbLzDrKnGZFMufBXkoU4DpvRVFdJW/view?usp=sharing</a>
 <hr>
 <h2 id="2-como-funciona-o-envio">2. Como Funciona o Envio</h2>
 <h3 id="-quando-enviar">➤ Quando enviar:</h3>
 <p>Sempre que uma <strong>função for colocada em aprovação</strong>, devem ser enviados:</p>
 <ul>
-<li>A <strong>prévia da imagem (.jpg)</strong> para o <strong>Flow Review</strong>.</li>
+<li>A <strong>prévia da imagem (.jpg ou .png)</strong> para o <strong>Flow Review</strong>.</li>
 <li>O(s) arquivo(s) correspondente(s): archive, <code>.max</code>, <code>.psb</code>, <code>.pdf</code>.</li>
 </ul>
 <hr>
 <h2 id="3-localização-dos-arquivos-na-rede">3. Localização dos Arquivos na Rede</h2>
 <p>Todos os arquivos serão enviados via script e estarão organizados da seguinte forma:</p>
-<h2 id="todos-os-arquivos-serão-encontrados-no-servidor-de-clientes-com-o-ano-e-a-sua-nomenclatura">Todos os arquivos serão encontrados no servidor de clientes, com o ano e a sua nomenclatura</h2>
+<h2 id="todos-os-arquivos-serão-encontrados-no-servidor-de-clientes-com-o-ano-e-a-sua-nomenclatura">Serão encontrados no servidor de clientes, com o ano e a sua nomenclatura</h2>
 <h3 id="a-nomenclatura-do-arquivo-também-será-personalizada-automáticamente-para-facilitar-a-organização">A nomenclatura do arquivo também será personalizada automáticamente para facilitar a organização.</h3>
 <h3 id="estrutura-por-tipo-de-arquivo">Estrutura por tipo de arquivo:</h3>
 <h4 id="-cadernos--filtros-de-assets">📘 Cadernos / Filtros de Assets</h4>
@@ -180,7 +181,7 @@
 <li>As imagens destinadas ao cliente devem:
 <ol>
 <li>Ser enviadas <strong>como prévias</strong> para o <strong>Flow Review</strong>.</li>
-<li>Após aprovação, ser colocadas na pasta da revisão:
+<li>Após aprovação, serão colocadas na pasta da revisão:
 <ul>
 <li>Diretório: <code>04.Finalizacao</code></li>
 <li>Utilizar o <strong>nome já padronizado</strong> conforme o Flow.</li>
