feat: upload de arquivos disponibilizado para todos

--- a/CHANGELOG/Flow/uploadArquivos.html
+++ b/CHANGELOG/Flow/uploadArquivos.html
@@ -141,7 +141,7 @@
             <h1 id="-novo-processo-de-envio-de-arquivos---improov">📝 Novo Processo de Envio de Arquivos - Improov</h1>
 <h2 id="1-instalação-obrigatória">1. Instalação Obrigatória</h2>
 <p>Para que o processo funcione corretamente em todos os computadores conectados à rede da Improov, <strong>é obrigatório instalar o arquivo <code>script.bat</code> do link abaixo:</strong></p>
-<a href="https://drive.google.com/file/d/10vwAbLzDrKnGZFMufBXkoU4DpvRVFdJW/view?usp=sharing">https://drive.google.com/file/d/10vwAbLzDrKnGZFMufBXkoU4DpvRVFdJW/view?usp=sharing</a>
+<a href="https://drive.google.com/file/d/10vwAbLzDrKnGZFMufBXkoU4DpvRVFdJW/view?usp=sharing" target="_blank">https://drive.google.com/file/d/10vwAbLzDrKnGZFMufBXkoU4DpvRVFdJW/view?usp=sharing</a>
 <hr>
 <h2 id="2-como-funciona-o-envio">2. Como Funciona o Envio</h2>
 <h3 id="-quando-enviar">➤ Quando enviar:</h3>
