fix: Comment out the right column section in Flow Externo prototype

--- a/ideas/flow_externo_prototype.html
+++ b/ideas/flow_externo_prototype.html
@@ -157,12 +157,12 @@
 
         </main>
 
-        <aside class="rightcol">
+        <!-- <aside class="rightcol">
             <div class="calendar">
                 <h4>Calendário</h4>
             </div>
 
-            <!-- <div class="activity">
+            <div class="activity">
                 <h4>Últimas Atividades</h4>
                 <ul>
                     <li>João carregou <strong>Banner Campanha</strong></li>
@@ -174,8 +174,8 @@
             <div class="upload-quick">
                 <h4>Upload Rápido</h4>
                 <div class="drop">Arraste arquivos ou clique para anexar</div>
-            </div> -->
-        </aside>
+            </div>
+        </aside> -->
     </div>
 
     <footer class="footer">Legenda: <span class="badge success">Concluído</span> <span class="badge warn">Revisão</span>
